<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent_black"
                android:onClick="onClick">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resume_to_game"
            android:id="@+id/button_resume"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_game"
            android:id="@+id/button_save"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/load_game"
            android:id="@+id/button_load"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:id="@+id/button_exit"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"/>
    </LinearLayout>
</RelativeLayout>