<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<TextView
		android:id="@+id/textView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_margin="30dp"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:text="@string/app_name"
		android:textAppearance="?android:attr/textAppearanceLarge"/>

	<Button
		android:id="@+id/btn_continue"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:layout_margin="5dp"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:text="@string/продолжить"/>

	<Button
		android:id="@+id/btn_new_game"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:layout_margin="5dp"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:layout_below="@id/btn_continue"
		android:text="@string/new_game"/>

	<Button
		android:id="@+id/btn_load_game"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:layout_margin="5dp"
		android:layout_below="@id/btn_new_game"
		android:text="@string/load_game"/>

	<TextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:layout_margin="10dp"
		android:text="wowloltech"
		android:textAppearance="?android:attr/textAppearanceSmall"/>

</RelativeLayout>

