<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_id_minus"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="-1" />

        <TextView
            android:id="@+id/txt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="0"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_id_plus"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="+1" />

        <EditText
            android:id="@+id/edit_name_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/name" />

        <Button
            android:id="@+id/btn_save_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_name" />

        <Button
            android:id="@+id/btn_color_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pick_color" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_copy_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/copy_and_exit" />

        <EditText
            android:id="@+id/edittext_name_of_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="New edit save" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_pick_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_country"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"/>

</RelativeLayout>
